--- a/ui/webui/resources/cr_components/composebox/composebox.css
+++ b/ui/webui/resources/cr_components/composebox/composebox.css
@@ -436,8 +436,9 @@ search-animated-glow {
 
 #contextEntrypoint {
   color: var(--color-searchbox-results-foreground);
-  padding-inline-start: var(--contextual-entrypoint-and-carousel-context-entrypoint-padding-inline-start, 8px);
-  padding-inline-end: var(--contextual-entrypoint-and-carousel-context-entrypoint-padding-inline-end, 8px);
+  /* Do not set 'padding-inline-end/start' here. It is set in
+   * 'composebox_shared_style.css'.
+   */
 }
 
 #toolChipsContainer {
